# ShrimpStat

./: Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: pr_check.yml  pr_checks.yml
api/: Cargo.toml  Makefile.toml  README.md
api/src/: event_handler.rs  main.rs
api/src/db/tables/: mod.rs  servers.rs
api/src/models/: mod.rs  servers.rs
api/src/models/events/: mod.rs  server_amend_deaths.rs  server_amend_kills.rs  server_amend_max_players.rs  server_amend_name.rs  server_amend_players.rs  server_register.rs
macro_utils/: Cargo.toml
macro_utils/src/: lib.rs
shrimpstats_tf2/: Cargo.toml
shrimpstats_tf2/.cargo/: config.toml
shrimpstats_tf2/src/: lib.rs
src/: main.rs
webapp/: Cargo.toml  README.md
webapp/axum_htmx/: Cargo.toml
webapp/axum_htmx/src/: main.rs
webapp/src/: app.rs
webapp/yew_csr/: Cargo.toml  Makefile.toml
webapp/yew_csr/src/: app.rs  main.rs
